# xsd-parser-rs

./: .gitignore
wsdl-parser-cli/src/: main.rs
wsdl-parser/src/generator/: mod.rs
xsd-parser/: Cargo.toml
xsd-parser-cli/src/: main.rs
xsd-parser/src/generator/: alias.rs  enum.rs  enum_case.rs  import.rs  mod.rs  struct_field.rs  toml.rs
xsd-parser/src/parser/: import.rs  node_parser.rs  types.rs
xsd-parser/tests/type_name_clash/: expected.rs
xsd-types/: Cargo.toml
xsd-types/src/types/: gyearmonth.rs
